# members-card

./: README.md  pyproject.toml  requirements.txt  shell.nix
members_card/: generate_card.py  main.py
tests/: test_generate_card.py
tests/resources/: adherents.csv
